- drop fixed resultants when copying pseudoboolean constraint to avert segmentation fault
- correct matrix entry when resolving aggregated variables in checkSystemGF2() of cons_xor.c
- corrected symmetry detection graph of cons_and.c, cons_or.c, and cons_xor.c
- correct redundancy filter in consdataCreateRedundant() of cons_bounddisjunction.c

Build system
------------

### Cmake

- allow to set HIGHS_DIR via -D flag as well
- reenable building and testing of SCFLP example
- fixed that compiler flags for sanitizers were not used for compiling objects of SCIP library
- prioritize local includes for unittests, examples, and applications to link the intended SCIP version
- fix detection of Gurobi 11 and 12 libs on Linux

### Makefile

- fix use of SANITIZE=full for debug builds with GCC on Linux: removed -fsanitize=leak because it cannot be used together with -fsanitize=address
- fix that make install SHARED=true missed to install libscipbase

Miscellaneous
-------------

@section RN921 SCIP 9.2.1
*************************

Fixed bugs
----------

- apply same feasibility definition in PaPILO as in SCIP to avoid numerical inconsistencies
- check variable cancellation in SCIPvarAddVlb() and SCIPvarAddVub() to avert wrong infeasibility
- SCIPfreeReoptSolve() now also clears partial solutions
- fixed bug in calculation of "fractionality score" for spatial branching candidates in cons_nonlinear
- fixed bug with installing symmetry dialog in sub-SCIPs
- added copy callbacks for presolvers dualagg and redvub, branching rules lookahead and cloud, primal heuristics dualval and repair, propagator nlobbt, and separators gauge and convexproj
- respect maximal separation rounds setting by running remaining delayed separators in last round
- replace terms consistently in applyFixings() of cons_linear to handle infinite aggregations
- fixed bug with SOS2 constraints of size that avoided a correct enforcing

Build system
------------

### Cmake
