@@ -3115,8 +3115,8 @@ SCIP_RETCODE treeSwitchPath(
    )
 {
    int newappliedeffectiverootdepth;
-   int focusnodedepth;  /* depth of the new focus node, or -1 if focusnode == NULL */
-   int forkdepth;       /* depth of the common subroot/fork/pseudofork/junction node, or -1 if no common fork exists */
+   int forklen;        /* length of the path to subroot/fork/pseudofork/junction node, or 0 if no fork */
+   int focusnodedepth; /* depth of the new focus node, or -1 if focusnode == NULL */
    int i;
    SCIP_NODE* oldfocusnode;
 
@@ -3135,19 +3135,19 @@ SCIP_RETCODE treeSwitchPath(
 
    /* get the nodes' depths */
    focusnodedepth = (focusnode != NULL ? (int)focusnode->depth : -1);
-   forkdepth = (fork != NULL ? (int)fork->depth : -1);
-   assert(forkdepth <= focusnodedepth);
-   assert(forkdepth < tree->pathlen);
+   forklen = (fork != NULL ? (int)fork->depth + 1 : 0);
+   assert(forklen <= focusnodedepth + 1);
 
    /* delay events in node deactivations to fork and node activations to parent of new focus node */
    SCIP_CALL( SCIPeventqueueDelay(eventqueue) );
 
    /* undo the domain and constraint set changes of the old active path by deactivating the path's nodes */
-   for( i = tree->pathlen-1; i > forkdepth; --i )
+   while( tree->pathlen > forklen )
    {
-      SCIP_CALL( nodeDeactivate(tree->path[i], blkmem, set, stat, tree, lp, branchcand, eventqueue) );
+      SCIP_CALL( nodeDeactivate(tree->path[tree->pathlen - 1], blkmem, set, stat, tree, lp, branchcand, eventqueue) );
+      --tree->pathlen;
    }
-   tree->pathlen = forkdepth+1;
+   assert(tree->pathlen == forklen);
 
    /* apply the pending bound changes */
    SCIP_CALL( treeApplyPendingBdchgs(tree, reopt, blkmem, set, stat, transprob, origprob, lp, branchcand, eventqueue, cliquetable) );
@@ -3247,12 +3247,12 @@ SCIP_RETCODE treeSwitchPath(
    else if( fork != NULL && fork->reprop && !(*cutoff) )
    {
      /* propagate common fork again, if the reprop flag is set */
-      assert(tree->path[forkdepth] == fork);
+      assert(fork == tree->path[tree->pathlen - 1]);
       assert(fork->active);
       assert(!fork->cutoff);
 
-      SCIP_CALL( nodeRepropagate(fork, blkmem, set, stat, transprob, origprob, primal, tree, reopt, lp, branchcand, conflict,
-            eventfilter, eventqueue, cliquetable, cutoff) );
+      SCIP_CALL( nodeRepropagate(fork, blkmem, set, stat, transprob, origprob, primal, tree, reopt, lp, branchcand,
+            conflict, eventfilter, eventqueue, cliquetable, cutoff) );
    }
    assert(fork != NULL || !(*cutoff));
 
@@ -3267,30 +3267,26 @@ SCIP_RETCODE treeSwitchPath(
     * Bound change events on the new focus node, however, must not be cancelled out, since they need to be propagated
     * and thus, the event must be thrown and catched by the constraint handlers to mark constraints for propagation.
     */
-   for( i = forkdepth+1; i < focusnodedepth && !(*cutoff); ++i )
+   while( tree->pathlen < focusnodedepth && !(*cutoff) )
    {
-      assert(!tree->path[i]->cutoff);
-      assert(tree->pathlen == i);
-
       /* activate the node, and apply domain propagation if the reprop flag is set */
-      tree->pathlen++;
-      SCIP_CALL( nodeActivate(tree->path[i], blkmem, set, stat, transprob, origprob, primal, tree, reopt, lp, branchcand,
-            conflict, eventfilter, eventqueue, cliquetable, cutoff) );
+      ++tree->pathlen;
+      assert(!tree->path[tree->pathlen - 1]->cutoff);
+      SCIP_CALL( nodeActivate(tree->path[tree->pathlen - 1], blkmem, set, stat, transprob, origprob, primal, tree, reopt,
+            lp, branchcand, conflict, eventfilter, eventqueue, cliquetable, cutoff) );
    }
 
    /* process the delayed events */
    SCIP_CALL( SCIPeventqueueProcess(eventqueue, blkmem, set, primal, lp, branchcand, eventfilter) );
 
    /* activate the new focus node; there is no need to delay these events */
-   if( !(*cutoff) && (i == focusnodedepth) )
+   if( tree->pathlen == focusnodedepth && !(*cutoff) )
    {
-      assert(!tree->path[focusnodedepth]->cutoff);
-      assert(tree->pathlen == focusnodedepth);
-
       /* activate the node, and apply domain propagation if the reprop flag is set */
-      tree->pathlen++;
-      SCIP_CALL( nodeActivate(tree->path[focusnodedepth], blkmem, set, stat, transprob, origprob, primal, tree, reopt, lp, branchcand,
-            conflict, eventfilter, eventqueue, cliquetable, cutoff) );
+      ++tree->pathlen;
+      assert(!tree->path[tree->pathlen - 1]->cutoff);
+      SCIP_CALL( nodeActivate(tree->path[tree->pathlen - 1], blkmem, set, stat, transprob, origprob, primal, tree, reopt,
+            lp, branchcand, conflict, eventfilter, eventqueue, cliquetable, cutoff) );
    }
 
    /* mark new focus node to be cut off, if a cutoff was found */
@@ -3300,7 +3296,7 @@ SCIP_RETCODE treeSwitchPath(
    }
 
    /* count the new LP sizes of the path */
-   SCIP_CALL( treeUpdatePathLPSize(tree, forkdepth+1) );
+   SCIP_CALL( treeUpdatePathLPSize(tree, forklen) );
 
    SCIPsetDebugMsg(set, "switch path: new pathlen=%d\n", tree->pathlen);
 
